--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Leetmask",
+  "name": "LeetMask",
   "description": "Leetmask hides the difficulty tag of the problem and stops you from accessing any LeetCode profile, including your own.",
   "version": "1.1.1",
   "manifest_version": 3,
